add dependency table

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>ant</artifactId>
             <version>1.10.11</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+        </dependency>
     </dependencies>
 
     <properties>
